
syntax = "proto3";

option go_package = "github.com/ziyw/simplekv/proto/SimpleKeyValue";

package simplekv;

service SimpleKeyValue {
     rpc Put(PutRequest) returns (PutResponse) {}
     rpc Get(GetRequest) returns (GetResponse) {}
}

message PutRequest {
     string key = 1;
     string value = 2;
}

message PutResponse {
     string response = 1;
}

message GetRequest {
     string key = 1;
}

message GetResponse {
     string value = 1;
}